tests/baselines/reference/scannerStringLiterals.errors.txt
scannerStringLiterals.ts(10,34): error TS1002: Unterminated string literal.
scannerStringLiterals.ts(11,38): error TS1002: Unterminated string literal.


==== scannerStringLiterals.ts (2 errors) ====
    ""
    " "
    "a"
    "'"
    '"'
    "\""
    '\u2192\   '
    "Legal line continuation \
    "
    "Should error because of newline.
                                     
!!! error TS1002: Unterminated string literal.
    "Should error because of end of file.
                                         
!!! error TS1002: Unterminated string literal.